--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,17 @@ sudo: required
 services:
   - docker
 before_install:
- - docker build -t docker-react -f Dockerfile.dev .
-script: 
- - docker run -e CI=true docker-react npm run test 
-
+  - docker build -t docker-react -f Dockerfile.dev .
+script:
+  - docker run -e CI=true docker-react npm run test
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react"
+  env: "Docker-react-env"
+  bucket_name: elasticbeanstalk-us-east-1-430942503952
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
